@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: March 22, 2009</p>
+      <p>Last Updated: March 25, 2009</p>
     </td>
   </tr>
 </table>
@@ -1362,6 +1362,8 @@ nuttx-0.4.4 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Z80: Patch incorported: &quot;[2696648] Z80: interrupt flag stored in parity bit&quot;
 	  (submitted by JPelletier).  The is the same fix that was needed for the
 	  eZ80 and fixed in 0.4.2.
+	* netutils: Added logic to support a simple wget() function
+	* examples/wget: Added a test for wget()
 
 pascal-0.1.3 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
